# chat-bridger-backend

./: .dockerignore  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp-time  LICENSE  README.md  a2as.yaml  docker-compose.yml  pyproject.toml  ruff.toml
src/: __version__.py  config.py  logging_config.py  schema.sql
src/api/: api.py
src/api/auth/: __init__.py  database.py  dependencies.py  models.py  router.py
src/api/docs/: api_docs.py
src/api/middlewares/: __init__.py  cors.py
src/api/models/: __init__.py  requests.py  responses.py
src/api/routers/: __init__.py  agents.py  chat.py  health.py  tools.py
src/core/: agent_factory.py  agent_key.py  agent_loop.py  client_tools.py  event_handlers.py  mcp_manager.py  model_factory.py
src/openai_agents_extensions/: __init__.py  session_factory.py  sessions_config.py  supabase_session.py
src/services/: chat_service.py  conversation_context_manager.py  title_renamer.py
src/tooling/: mcp_servers.py  tools.py
tests/: conftest.py  test_agent_flow.py  test_agents.py  test_health.py  test_messages.py
